syntax = "proto3";

package mr_cache;

service MrCache {
  // Strings
  rpc SET(KeyValues) returns (Effect);
  rpc GET(Keys) returns (Values);

  // Hashes (Should I rename the messages instead of reusing the key/value ones?)
  rpc HSET(HashedKeyValues) returns (Effect);
  rpc HGET(HashedKeys) returns (Values);
  rpc HGETALL(Key) returns (Values);
  rpc HKEYS(Key) returns (Keys);
  rpc HVALS(Key) returns (Values);
}

message Key {
  string key = 1;
}

message Keys {
  repeated Key keys = 1;
}

message Value {
  string value = 1;
}

message Values {
  repeated Value values = 1;
}

message KeyValue {
  string key = 1;
  string value = 2;
}

message KeyValues {
  repeated KeyValue keyValues = 1;
}

message HashedKeyValues {
  Key key = 1;
  KeyValues keyValues = 2;
}

message HashedKeys {
  Key key = 1;
  Keys keys = 2;
}

message Effect {
  bool effect = 1;
}
